Adding ignore rule due to incompatible flake8 rules of exclude and per file ignore

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,6 @@ jobs:
       - name: flake8 Lint
         uses: py-actions/flake8@v2
         with:
-          ignore: "F403, E722"
+          ignore: "F401, F403, E722"
           exclude: "sensor/", "bridge/data/"
           max-line-length: "100"
-          per-file-ignores: "__init__.py:F401"
