--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,3 +19,4 @@ jobs:
           ignore: "F401, F403, E722"
           exclude: "sensor/", "bridge/data/"
           max-line-length: "120"
+          path: "cloud"
