--- a/cloud/Procfile
+++ b/cloud/Procfile
@@ -1,4 +1,4 @@
-web: gunicorn app:app --preload --log-level=debug --bind 0.0.0.0:${PORT} wsgi
+web: gunicorn --preload --log-level=debug --bind 0.0.0.0:${PORT} app:app
 init: flask db init
 migrate: flask db migrate
 upgrade: flask db upgrade
